# bronkerbosch

./: CMakeLists.txt  README.md
data/: PIG.txt
src/: bronkerbosch.cpp  bronkerbosch.h  main.cpp  utils.cpp  utils.h
